--- a/updatehandler/build.gradle
+++ b/updatehandler/build.gradle
@@ -7,7 +7,7 @@ version = '1.0.1' // Change this to match your version number
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "24.0.0 rc4"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         minSdkVersion 15
