--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.ajts.sab_2"
@@ -25,6 +25,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
-//    compile project(':updatehandler')
-    compile 'androidmads.updatehandler:updatehandler:1.0.3'
+    compile project(':updatehandler')
+//    compile 'androidmads.updatehandler:updatehandler:1.0.3'
 }
