--- a/updatehandler/build.gradle
+++ b/updatehandler/build.gradle
@@ -7,7 +7,7 @@ version = '1.0.3' // Change this to match your version number
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         minSdkVersion 15
