--- a/updatehandler/build.gradle
+++ b/updatehandler/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'androidmads.updatehandler' // Change this to match your package name
-version = '1.0.4' // Change this to match your version number
+version = '1.0.5' // Change this to match your version number
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         minSdkVersion 15
@@ -19,9 +19,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.volley:volley:1.0.0'
     compile 'org.jsoup:jsoup:1.10.1'
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:appcompat-v7:25.2.0'
 }
 
 def siteUrl = 'https://github.com/androidmads/UpdateHandler'      // Homepage URL of the library
@@ -71,13 +70,13 @@ bintray {
     configurations = ['archives']
     pkg {
         repo = 'maven'
-        name = 'androidmads.updatehandler'
+        name = group
 
         version {
-            name = '1.0.4'
+            name = '1.0.5'
             desc = 'Update Checker Library'
             released = new Date()
-            vcsTag = '1.0.4'
+            vcsTag = '1.0.5'
         }
 
         licenses = ['Apache-2.0']
